css/rp.css
@font-face{
	  font-family: 'Multicolore';
	  src: url(/fonts/multicolore/Multicolore.otf);
  }

@font-face{
  font-family: 'Biko';
  src: url('/fonts/biko/Biko_Regular.otf');
}
html{
  background-color: #191919;
}
.constant{
  position: fixed;
  top: 0;
  background-color: #191919;
}
.header{
  font-family: 'Multicolore';
  font-size: 32.5px;
  width: 85%;
  padding-top: 5%;
  padding-bottom: 1%;
  margin-left: 6.5%;
  color: #39B54A
}

.subhead{
  font-family: 'Biko';
  margin: auto;
  color: white;
  width: 85%;
  font-size: 14px;
}

.button{
  color: black;
  cursor: pointer;
  text-decoration: none;
}

.buttonflex{
  font-family: 'Multicolore';
  font-weight: bold;
  border-radius: 12px;
  margin: auto;
  margin-bottom: 15px;
  width: 100%;
  height: 60px;
}

#one{
  background-color: #5ABA50;
}

#two{
  background-color: #A1CD54;
}

#three{
  background-color: #B4E3F4;
}

#four{
  background-color: #21A7DF;
}

#five{
  background-color: #DB7B2E;
}

#six{
  background-color: #DD9533
}
.buttontext{
  padding-left: 20px;
  padding-top: 15px;
  font-size: 40px;
}
.twolinebuttontext{
  padding-top: 15px;
  padding-bottom: 2px;
  padding-left: 20px;
  font-size: 36px;
}
.remotelist{
  margin-top: 30%;
}

@media screen and (max-width : 374px) and (min-height : 540px){
  .header{
    font-size: 25px;
  }
}

@media screen and (max-width : 376px) and (max-height: 539px){
  .header{
    font-family: 'Multicolore';
    font-size: 25px;
    width: 85%;
    padding-top: 5%;
    padding-bottom: 1%;
    margin-left: 6.5%;
    color: #39B54A
  }
  .subhead{
    font-family: 'Biko';
    margin: auto;
    color: white;
    width: 85%;
    font-size: 13px;
  }
  .remotelist{
    margin-top: 30%;
  }
  .subheader{
    font-size: 14px;
  }
}

@media screen and (max-width : 320px){

  .buttontext{
    font-size: 30px;
  }
  .remotelist{
    margin-top: 35%;
  }
  .subheader{
    font-size: 13px;
  }
  .header{
    font-size: 23px;
  }
}

